# chia-block-listener

./: Cargo.toml  MIGRATION_COMPLETE.md  README.md  index.d.ts  index.js  package.json
.github/workflows/: ci.yml  release.yml
.knowledge/: context.md  proj_index.md  tasks.md
crate/chia-block-database/: Cargo.toml  README.md
crate/chia-block-database/migrations/postgres/: 001_core_tables.sql  002_indexes.sql  003_views.sql  004_core_functions.sql  005_selective_indexing.sql  006_nft_tables.sql  007_cat_tables.sql  008_cat_functions.sql  009_nft_functions.sql  010_nft_ownership_history.sql  011_temporal_indexes.sql  012_analytics_optimization_indexes.sql
crate/chia-block-database/migrations/sqlite/: 001_core_tables.sql  002_indexes.sql  003_views.sql  004_core_functions.sql  005_selective_indexing.sql  006_nft_tables.sql  007_cat_tables.sql  008_cat_functions.sql  009_nft_functions.sql  010_nft_ownership_history.sql  011_temporal_indexes.sql  012_analytics_optimization_indexes.sql
crate/chia-block-database/src/: database.rs  error.rs  lib.rs  migrations.rs  tests.rs
crate/chia-block-database/src/crud/: blocks.rs  cats.rs  coins.rs  mod.rs  nfts.rs  spends.rs  sync_status.rs  system_preferences.rs
crate/chia-block-database/src/namespaces/: assets.rs  blockchain.rs  mod.rs  system.rs
crate/chia-block-listener/: Cargo.toml
crate/chia-block-listener-napi/: Cargo.toml
crate/chia-block-listener-napi/src/: block_parser_napi.rs  dns_discovery_napi.rs  event_emitter.rs  lib.rs  peer_pool_napi.rs
crate/chia-block-listener/src/: error.rs  lib.rs  listener.rs  peer_connection.rs  tls.rs  types.rs
crate/chia-full-indexer/: Cargo.toml  README.md
crate/chia-full-indexer/src/: blockchain_utils.rs  chia-block-listener.code-workspace  config.rs  error.rs  lib.rs  main.rs  peer_manager.rs  solution_indexer.rs  sync_worker.rs  types.rs  watchdog.rs
crate/chia-generator-parser/: Cargo.toml
crate/chia-generator-parser/examples/: basic_usage.rs  production_test.rs
crate/chia-generator-parser/src/: lib.rs  parser.rs  types.rs
crate/chia-graphql/: Cargo.toml  README.md
crate/chia-graphql/docs/: authentication.md  getting-started.md  schema-overview.md
crate/chia-graphql/docs/examples/: index.md
crate/chia-graphql/docs/queries/: addresses.md  analytics.md  balances.md  cats.md  core.md  network.md  nfts.md  puzzles.md  solutions.md  temporal.md  transactions.md
crate/chia-graphql/docs/types/: core.md  index.md
crate/chia-graphql/examples/: server.rs
crate/chia-graphql/src/: database.rs  error.rs  lib.rs
crate/chia-graphql/src/resolvers/: addresses.rs  analytics.rs  balances.rs  cats.rs  core.rs  mod.rs  network.rs  nfts.rs  puzzles.rs  solutions.rs  temporal.rs  transactions.rs
crate/chia-graphql/src/schema/: mod.rs  query.rs
crate/chia-graphql/src/schema/types/: addresses.rs  analytics.rs  balances.rs  cats.rs  core.rs  mod.rs  network.rs  nfts.rs  puzzles.rs  solutions.rs  temporal.rs  transactions.rs
crate/chia-peer-pool/: Cargo.toml
crate/chia-peer-pool/src/: error.rs  lib.rs  peer_connection.rs  peer_pool.rs  types.rs
crate/chia-peer-tls/: Cargo.toml
crate/chia-peer-tls/src/: error.rs  lib.rs  tls.rs  types.rs
crate/dig-dns-discovery/: Cargo.toml  README.md  package-lock.json
crate/dig-dns-discovery/examples/: discover_peers.rs
crate/dns-discovery/: Cargo.toml
crate/dns-discovery/examples/: discover_peers.rs
crate/dns-discovery/src/: lib.rs
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/win32-x64-msvc/: package.json
src/: block_listener.rs  block_parser_napi.rs  database_napi.rs  dns_discovery.rs  dns_discovery_napi.rs  error.rs  event_emitter.rs  lib.rs  listener.rs  peer.rs  peer_pool.rs  peer_pool_napi.rs  protocol.rs  tls.rs  types.rs
