[package]
name = "chia-block-database"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database drivers
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid", "json", "any"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0" 