[package]
name = "chia-block-listener-napi"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi9", "tokio_rt", "async"] }
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chia-block-listener = { path = "../.." }
chia-generator-parser = { path = "../chia-generator-parser" }
dns-discovery = { path = "../dns-discovery" }
chia-protocol = "0.26"
chia-traits = "0.26"

[build-dependencies]
napi-build = "2"
