[package]
name = "chia-block-listener"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Real-time Chia blockchain event listener with WebSocket connections"
repository = "https://github.com/your-org/chia-block-listener"

[dependencies]
# Core Chia protocol
chia-protocol = "0.1"
chia-traits = "0.1"
chia-generator-parser = { path = "../chia-generator-parser" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"

# Networking
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
native-tls = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# TLS and certificates
sha2 = "0.10"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0" 