[package]
name = "chia-full-indexer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Full blockchain indexer for Chia using peer pools and block listeners"
repository = "https://github.com/your-org/chia-block-listener"

[dependencies]
# Database
chia-block-database = { path = "../chia-block-database" }

# Networking and peers
dns-discovery = { path = "../dns-discovery" }
chia-peer-pool = { path = "../chia-peer-pool" }
chia-block-listener = { path = "../chia-block-listener" }
chia-generator-parser = { path = "../chia-generator-parser" }

# Chia SDK for CLVM parsing
chia-wallet-sdk = "0.15"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for metadata
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Configuration
config = "0.14"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid", "json"] }

# Collections
indexmap = "2.0"

# Math
bigdecimal = "0.4"

# Hex encoding/decoding
hex = "0.4"

# SHA2 for hashing
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4" 